--- a/main.tex
+++ b/main.tex
@@ -50,10 +50,10 @@ At the heart of scientific investigation is the identifying and organizing of ob
 
 
 
-It's quite possible, however, that we won't be able to distinguish between two objects with only one quantity. Say, for instance, that we're talking about weather. Knowing what the temperature will be tomorrow is certainly useful, but as anyone from Florida can tell you, 80$^o$F with 95$\%$ humidity is very different from 80$^o$F with 30$\%$ humidity. In distinguishing objects, then, we will often want to define more than one quantity, to give an even more descriptive way of categorizing objects. By defining enough quantities to distinguish one object from another, but not so many such that we have redundancies, we can define a \textbf{coordinate system}.
+It's possible, however, that we won't be able to distinguish between two objects with only one quantity. Say, for instance, that we're talking about weather. Knowing what the temperature will be tomorrow is certainly useful, but as anyone from Florida can tell you, 80$^o$F with 95$\%$ humidity is very different from 80$^o$F with 30$\%$ humidity. In distinguishing objects, then, we will often want to define more than one quantity. By defining enough quantities to distinguish one object from another, but not so many such that we have redundancies, we can define a \textbf{coordinate system}.
 
 
-Normally, we think of coordinate systems in the context of quantifying an object's position, in terms of its x-, y-, and z-coordinates. Though it may be an abuse of terminology, we may use the same phrase to describe coordinates in other contexts. Consider, for instance, phase space. Configurations in phase space are fully characterized by position and momentum, which would be our two quantities, thus giving us a coordinate system. To give another example, we can look at a system described by the ideal gas law. With this, we would create a coordinate system with pressure, volume, and temperature. 
+Normally, we think of coordinate systems in the context of quantifying an object's position, in terms of its x-, y-, and z-coordinates. Though it may be an abuse of terminology, we will use the same phrase to describe coordinates in other contexts. Consider, for instance, phase space. Configurations in phase space are fully characterized by position and momentum, which would be our two quantities, thus giving us a coordinate system. To give another example, we can look at a system described by the ideal gas law. With this, we would create a coordinate system with pressure, volume, and temperature. 
 
 \begin{defn}
 	A \textbf{coordinate system} $Q$ is a collection of $n$ quantities $q^i : U \to \mathbb{R}^n$ such that there is a one-to-one relationship between the physical objects in $U$ and elements of $\mathbb{R}^n$.
@@ -197,8 +197,7 @@ Furthermore, $\partial\partial \sigma^k$ is empty. Consider once again a sphere 
 
 \textbf{Path independence is not necessary to talk about. The functional depends on the path. If it only depends on the beginning and end points, it's a boundary functional. Say "Force dpeends on the path and that's good. Later the force only depends on the starting and end, then it's a boundary functional / gradiant of some scalar field"}
 
-Say we have a path on our manifold (that is, a 1-surface), along which we want a particle to travel, and suppose we have a force in play with some sort of effect on the particle. We can define a work function which, with the aforementioned defined force, takes a path and returns the work (a scalar) necessary to move the particle along that path. More concretely, say we have a line $\lambda$ with starting point $a$, ending point $c$, and some middle point $b$. We can say that $W(\lambda_{a \to c}) = W(\lambda_{a \to b}) + W(\lambda_{b \to c})$. The work function is thus a linear function along a 1-surface: a \textbf{1-functional}. Furthermore, just as 1-surfaces are a specific subset of k-surfaces, we can say that 1-functionals are a specific subset of \textbf{k-functionals}. 
-\textbf{Make specifically clear that we are calling the 1-functional a linear function along a 1-surface. Then we cay say that a k-functional is something that takes a k-surface}
+Say we have a path on our manifold (that is, a 1-surface), along which we want a particle to travel, and suppose we have a force in play with some sort of effect on the particle. We can define a work function $W$ which, with the aforementioned defined force, takes a path $\lambda$ and returns the work (a scalar) necessary to move the particle along that path. More concretely, say we have a line $\lambda$ with starting point $a$, ending point $c$, and some middle point $b$. We can say that $W(\lambda_{a \to c}) = W(\lambda_{a \to b}) + W(\lambda_{b \to c})$. The work function is thus a linear function along a 1-surface: a \textbf{1-functional}. Furthermore, just as 1-surfaces are a specific subset of k-surfaces, we can say that 1-functionals are a specific subset of \textbf{k-functionals}, which in general will be functions along k-surfaces. 
 
 
 
@@ -211,23 +210,25 @@ Say we have a path on our manifold (that is, a 1-surface), along which we want a
 	II. $f_k$ commutes with the limit. That is, the limit of the function is the function of the limit. 
 \end{defn}
 
-\textbf{We're defining the length with differnetial elements. don't do that!!! Have to make the example with a diagonal}
-The second point in this definition must be remarked on, and it will be clarified with an example. The length of a line is not a k-functional. Length L $= \int ds = \int \sqrt{dx^2 + dy^2}$. This is clearly not a linear function, due to the square root. This comes from the infinitesimal segment of a curve $ds$ being made up of alternating horizontal and vertical infinitesimals $dx$ and $dy$. This is distinct from the limit of length L $= \sqrt{(x_2 - x_1)^2 + (y_2 - y_1)^2}$. Simply put, the length of the limit is not the same thing as the limit of the length. 
+\textbf{Still not a clear explanation}
+The second point in this definition must be remarked on, and it will be clarified with an example: the length of a line is not a k-functional. The length of a line $\lambda$ is equal to the sum of the magnitudes in the length's constituent directions. So, for a line $\lambda \in \mathbb{R}^2$ with components x and y, the length $L = \sqrt{x^2 + y^2}$. This is \emph{not} the same as the sum of the individual lengths, which would be just $x + y$. Simply put, the length of the limit is not the same thing as the limit of the length. 
 
 
 \begin{defn}
 	$F_k$ is the set of all functionals of dimension k, and $F = \cup_{k=0}^nF_k$ is the set of all functionals. 
 \end{defn}
 
-\textbf{This won't be enough to make them understand. Conservative and nonconservative should help}
-In the previous section, we discussed the boundary operator as a map from a k-surface to its boundary. We can similarly create an operator that takes a k-functional and makes it apply to a (k+1)-surface. In complement to "boundary operator", we define the \textbf{boundary functional} as the operator on k-functionals that forces the k-functional to act only on the boundary of the k-surface. 
-\textbf{Here we can talk about the conservative forces. Talk about it not as somehting that depends only the starting and end points, but as something such that the closed path gives zero}
+
+In the most general case, the work done along a path will depend on the path itself. For certain forces, however, the work done will depend only on the starting and ending points of the path. That is, it depends only on the \emph{boundary} of the path. This implies that for such a force, if the path is closed (i.e., the starting and ending points are the same), the total work done will be zero. Forces that do path-independent work are called conservative, while those that do not are called nonconservative. 
+
+The boundary of a k-surface is a (k-1)-surface, which can be passed to a (k-1)-functional. Just as we can relate a k-surface to its boundary, we can relate a k-functional to the (k-1)-functional. In complement to the boundary operator $\partial$, we define the \textbf{boundary functional} $\eth$. 
+
+
 
 \begin{defn}
 	$\eth : F_k \to F_{k+1}$ such that $\eth f_k(\sigma^{k+1}) = f_k(\partial \sigma^{k+1})$ is the \textbf{boundary functional} on k-functionals. 
 \end{defn}
 
-Further properties of the boundary functional arise due to its relationship with the boundary operator.
 
 
 \begin{prop}
@@ -318,9 +319,9 @@ squarednode/.style={rectangle, draw=red!60, fill=red!5, very thick, minimum size
 \end{tikzpicture}
 
 
-\textbf{Be careful, each functional may only work on a region/patch, while we may not have a form that works on the whole space}
+
 \begin{prop}
-	All linear 1-functionals have a corresponding covector, such that for $f : S \to \mathbb{R}$, $f = \int_{\lambda} \omega_1(d\lambda)$. In words, a linear functional applied over a line is the same as an integral of a covector over the infinitesimal segments of that line. 
+	All linear 1-functionals have a corresponding covector, such that for $f : S \to \mathbb{R}$, $f = \int_{\lambda} \omega_1(d\lambda)$. In words, a linear functional applied over a line is the same as an integral of a covector over the infinitesimal segments of that line. Functionals may only be valid on certain patches in our space, however, meaning that we cannot necessarily define a form that works everywhere. 
 \end{prop}
 
 
@@ -355,12 +356,19 @@ Using line segments or parallelograms as our infinitesimal elements is not suffi
 	$\Omega_k$ is the set of all forms of dimension k and $\Omega = \cup_{k=0}^n\Omega_k$ is the set of all forms. 
 \end{defn}
 
+To finish up the generalization of the previous section, we establish the relationship between k-functionals and k-forms, between k-surfaces and k-vectors. The latter two are infinitesimal variants of the former two, and are related to one another by an integral. 
+
+
+\begin{prop}
+	Every linear k-functional has a corresponding k-form, such that for $f_k : S^k \to \mathbb{R}$, $f_k = \int_{\sigma^k} \omega_k(d\sigma^k)$. In words, a linear functional applied over a k-surface is the same as an integral of a k-form over the infinitesimal parallelepipedes of that k-surface. 
+\end{prop}
+
 \textbf{(Look up geometric measure theory. Highlight in the introduction that the definitions as we put them don't give diff forms, but that this gives the right intuition. For a density, add a constant at a particular point. It doesn't change the over all mass. Take a force and increase it by a constant at a particular point, doesn't change the overall work)}
 
-A clarification must be made now. In most treatments of electromagnetism, the magnetic field $B$ is a pseudeovector. What this means is that while $B$ behaves nicely and as a vector under rotation, but when reflected gains an additional sign flip. This particular characterization of $B$ does not generalize to higher dimensions. Instead, we will be treating $B$ as a matrix, as part of the electromagnetic field tensor (a type of object that also is yet undefined). This characterization \emph{does} generalize well.
+A clarification must be made now. In most treatments of electromagnetism, the magnetic field $B$ is a pseudeovector. What this means is that $B$ behaves nicely and as a vector under rotation, but when reflected gains an additional sign flip. This particular characterization of $B$ does not generalize to higher dimensions. Instead, we will be treating $B$ as a matrix, as part of the electromagnetic field tensor (a type of object that also is yet undefined). This characterization \emph{does} generalize well.
 
-\textbf{Say that the components are being kept track of by the two direction tangent, rather than normal. I.e. $B_z$ is actually $B_{xy}$. Say that this doesn't generalize because there isn't simply one perpendicular, rather n-2 perpendiculars. So, we will be identifying the components with the two directions}
-It is nevertheless interesting to talk about objects that undergo such sign flips under reflection. Consider an x-y coordinate plane, with x in the horizontal direction and y in the vertical direction. The coordinate system may be rotated freely (creating an equivalence class of directions), but try swapping x and y, so that x is now vertical and y is now horizontal. The original coordinate system can no longer be reached simply through rotation; it would require a flipping of one of the axes. (\textbf{Doesn't allow us to define, just talks about how permutations give the minus sign. So if we want something that gives the paralellepiped with sign flips under reflections, we want the wedge product})This allows us to define the \textbf{wedge product}: a tool that joins k-vectors in such an antisymmetric way.
+
+It is nevertheless interesting to talk about objects that undergo such sign flips under reflection. Consider an x-y coordinate plane, with x in the horizontal direction and y in the vertical direction. The coordinate system may be rotated freely (creating an equivalence class of directions), but try swapping x and y, so that x is now vertical and y is now horizontal. The original coordinate system can no longer be reached simply through rotation; it would require a flipping of one of the axes. We need a tool that has the property of sign-flips under permutations of components. This is the \textbf{wedge product}.
 \textbf{Probably put a picture of that here}
 
 
@@ -370,7 +378,7 @@ It is nevertheless interesting to talk about objects that undergo such sign flip
 	The \textbf{wedge product} $\wedge : V^k\times V^j \to V^{k+j}$ combines k-vectors antisymmetrically to generate parallelepipeds. 
 \end{defn}
 
-It may seem that the cross product in multivariable calculus and the wedge product are the same thing, but this is not the case. The difference comes in by the lack of generalization of the cross product. In 3D, the cross product gives a vector perpendicular to some surface. In 4D, however, there isn't simply one perpendicular. Furthermore, the cross product requires that angles be defined, and the clever reader will notice that we still have not yet given any notion of angles (that comes in chapter 3). The wedge product has no such restrictions, so it is the one that we will be using. 
+It may seem that the cross product in multivariable calculus and the wedge product are the same thing, but this is not the case. The difference comes in by the lack of generalization of the cross product. In 3D, the cross product gives a vector perpendicular to some surface. In 4D, however, there isn't simply one perpendicular, but two. In a general n-D space, there will be (n-2) perpendiculars. What we do instead is keep track of components using the two directions tangent to the point, rather than by the direction normal to the point (i.e., $B_z$ is actually $B_{xy}$).  . Furthermore, the cross product requires that angles be defined, and the reader may have noticed that we still have not yet given any notion of angles (that comes in chapter 3). The wedge product has no such restrictions, so it is the one that we will be using. 
 
 \begin{coro}
 	\textbf{Maybe we don't need this corollary here}
@@ -382,12 +390,9 @@ It may seem that the cross product in multivariable calculus and the wedge produ
 
 
 
-To finish up the generalization of the previous section, we establish the relationship between k-functionals and k-forms, between k-surfaces and k-vectors. The latter two are infinitesimal variants of the former two, and are related to one another by an integral. 
 
-\textbf{2.11 can be moved up to the discussion on k-forms and k-vectors, and then ending this section with wedge product stuff}
-\begin{prop}
-	Every linear k-functional has a corresponding k-form, such that for $f_k : S^k \to \mathbb{R}$, $f_k = \int_{\sigma^k} \omega_k(d\sigma^k)$. In words, a linear functional applied over a k-surface is the same as an integral of a k-form over the infinitesimal parallelepipedes of that k-surface. 
-\end{prop}
+
+
 
 \textbf{(Make a note that the vector has an orientation, and it's associated with the order of integration. Flipping the integral is the same as getting a minus sign on the vector.)}
 
@@ -400,16 +405,15 @@ NOTE: Will have to talk about what the basis is. We start by saying that in a ne
 Up until this point in our discussion of k-forms and k-vectors, we've remained in a general coordinate-free form. For a conceptual understanding of the tools in use, this is just fine, and is in fact preferable. It shows that the math up until this point is "universal," and can be applied to any frame of reference without sacrificing scientific validity. Furthermore, it should be noted that nature itself is coordinate-free. The universe doesn't come prepackaged with coordinates, rather they are something that humans have created to streamline scientific investigation. The caveat to this is that while coordinate-free works well for conceptual understanding, it isn't all that useful for solving actual problems in physics, which is the entire point. Therefore, in this section, we will begin imposing coordinates on the systems we're working with. 
 
 
-Recall now definitions 1.1 and 1.2, and say we have a point $P$ on a manifold $X$, and let $d\lambda$ be a vector starting at point $P$. At this moment, the vector is coordinate-free; a thing "in itself", if you will. In some neighborhood of $P$ there will be a coordinate system defined that we can use to describe $d\lambda$. Mathematically, this relates to defining the coordinate system in terms of \textbf{basis vectors}, and assigning $d\lambda$ directional components along each basis vector, the sum of which gives us $d\lambda$. So, $d\lambda = dx^i \frac{\partial \lambda}{\partial x^i} = dx^i e_i$,\footnote{There is an implied sum over $i$ here. That is, $\sum_i^n dx^i e_i = dx^i e_i$. Such notation can be used any time there is a matching upper and lower index. This is Einstein Summation Convention, and is heavily used throughout physics. It is therefore necessary to become comfortable with it.} where $e_i$ is the ith basis vector, and $dx^i$ is the vector component along that basis. Basis vectors as used here are therefore covectors, and the vector compoments are vectors. In other words, we can say that $e_i$ gives us an infinitesimal segment along lines of $x^i$. \textbf{Not true, if $e_i$ were an infinitesimal line segment, and we multiplied it by another $dx^i$, then $d\lambda$ would be a second order infinitesimal. $e_i$ is a function that takes a number and gives the line segment. We can say that $dx^1 e_1$ gives an infinitesimal segment along $x^1$. Another anology, the coordinate system is something that can take a set of coordinates, and give a point; a map from n numbers to a point. A basis is a function from n numbers to a vector, and the $dx^i$s are the numbers. We can use this to define vector basis}
-\emph{$e_i$ is a vector, not a covector, despite what the lower index may say. That's a sum, not an inner product}
+Recall now definitions 1.1 and 1.2, and say we have a point $P$ on a manifold $X$, and let $d\lambda$ be a vector starting at point $P$. At this moment, the vector is coordinate-free; a thing "in itself", if you will. In some neighborhood of $P$ there will be a coordinate system defined that we can use to describe $d\lambda$. Mathematically, this relates to defining the coordinate system in terms of \textbf{basis vectors}, and assigning $d\lambda$ directional components along each basis vector, the sum of which gives us $d\lambda$. So, $d\lambda = dx^i \frac{\partial \lambda}{\partial x^i} = dx^i e_i$,\footnote{There is an implied sum over $i$ here. That is, $\sum_i^n dx^i e_i = dx^i e_i$. Such notation can be used any time there is a matching upper and lower index. This is Einstein Summation Convention, and is heavily used throughout physics. It is therefore necessary to become comfortable with it.} where $e_i$ is the ith basis vector, and $dx^i$ is the vector component along that basis. In other words, we can say that $dx^1e_1$ gives us an infinitesimal segment along $x^1$, $dx^2e_2$ along $x^2$, and so on. 
 
 
-Functionals will be dealt with in a similar way. Let $\omega$ be a covector and $d\lambda$ be an infinitesimal segment. Then $\omega(d\lambda)$ is a linear function of the coordinate differences along $d\lambda$. Therefore we can write $\omega = \omega_i \frac{\partial x^i}{\partial \lambda} = \omega_i e^i$ where each $e^i$ is a basis covector. It does function similarly to $e_i$, however, when it is applied to an infinitesimal segment $d\lambda$. In fact, $e^i(d\lambda) = e^i(dx^j e_j) = dx^j e^i(e_j) = dx^j \delta^i_j\footnote{This is the Kronecker delta, defined to equal 1 when i = j, and 0 otherwise} = dx^i$.
-\textbf{Basis covector is the form that returns the ith component}
+Functionals will be dealt with in a similar way. Let $\omega$ be a covector and $d\lambda$ be an infinitesimal segment. Then $\omega(d\lambda)$ is a linear function of the coordinate differences along $d\lambda$. Therefore we can write $\omega = \omega_i \frac{\partial x^i}{\partial \lambda} = \omega_i e^i$ where each $e^i$ is a basis vector. In fact, $e^i(d\lambda) = e^i(dx^j e_j) = dx^j e^i(e_j) = dx^j \delta^i_j = dx^i$.\footnote{$\delta^i_j$ is the Kronecker delta, defined to equal 1 when i = j, and 0 otherwise}
+
 
 Putting everything together now, for infinitesimal segment d$\lambda$ and k-form $\omega$, $\omega(d\lambda) = \omega_ie^i(dx^je_j) = \omega_idx^je^ie_j = \omega_idx^j\delta^i_j = \omega_i dx^i$. This is an interesting result: when properly defined and carefully applied to each other, a vector and covector together naturally simplify down to a summation of functions applied over infinitesimal segments. 
 
-\textbf{At least for vectors and covectors, tensor transformation stuff can start here here}
+
 
 
 \underline{\textbf{PUT MATH STUFF DOWN HERE FOR NOW}}
@@ -494,6 +498,13 @@ NOTES on tensors: Talking about tensors as multilinear maps makes it so that vec
 
 \textbf{Make a section on EnM here (both relativistic and nonrelativistic), just to be able to demonstrate how all the math works}
 
+\section{Electricity and Magnetism}
+
+- We have work, this relates to force, and the electric field (magnetic field does no work)
+
+- We can relate the electric force to a potential using the boundary functional (i.e. $f_e = -\eth\phi$)
+
+- Define the field strength tensor
 
 
 
